--- a/regression_lineaire_morceaux.ipynb
+++ b/regression_lineaire_morceaux.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\elelo\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\elelo\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3444: FutureWarning: In a future version of pandas all arguments of read_csv except for the argument 'filepath_or_buffer' will be keyword-only\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "## Chargement des données méteo + modification du noms des régions\n",
     "#meteo_reg_df=pd.read_csv(\"/Users/jeremiedarracq/Stat-app/temperature_reg.csv\",\";\")\n",
@@ -78,6 +96,45 @@
     "\n",
     "meteo_reg_df.loc[meteo_reg_df[\"region\"]==\"Nouvelle-Aquitaine\",\"region\"] = \"Nouvelle Aquitaine\"\n",
     "meteo_reg_df.loc[meteo_reg_df[\"region\"]==\"Grand Est\",\"region\"] = \"Grand-Est\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['horodate', 'region_x', 'code_region', 'total_energie_soutiree_wh',\n",
+       "       'plage_de_puissance_souscrite', 'nb_points_soutirage',\n",
+       "       'jour_max_du_mois_0_1', 'semaine_max_du_mois_0_1', 'profil',\n",
+       "       'profil_type', 'date', 'code_reg', 'nom_reg', 'Ensemble',\n",
+       "       'conso_moyenne', 'Code', 'Libellé',\n",
+       "       'Part des \"artisans, commerçants, chefs d'entreprise\" dans la population 2018',\n",
+       "       'Part des \"employés\" dans la population 2018',\n",
+       "       'Part des \"ouvriers\" dans la population 2018',\n",
+       "       'Part des \"retraités\" dans la population 2018',\n",
+       "       'Part des \"agriculteurs exploitants\" dans la population 2018',\n",
+       "       'Part des \"professions intermédiaires\" dans la population 2018',\n",
+       "       'Part des \"autres sans activité professionnelle\" dans la population 2018',\n",
+       "       'Part des \"autres sans activité professionnelle\" dans la population 2018.1',\n",
+       "       'Part des \"cadres et professions intellectuelles supérieures\" dans la population 2018',\n",
+       "       'Médiane du revenu disponible par UC 2018',\n",
+       "       'Population au dernier recensement 2018', 'Part des 15-29 ans 2018',\n",
+       "       'Part des 30-44 ans 2018', 'Part des 45-59 ans 2018',\n",
+       "       'Part des 60-74 ans 2018', 'Part des 75 ans et plus 2018',\n",
+       "       'Taux de chômage des 15 ans et plus (RP) 2018', 'tmoy'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enedis_final.columns"
    ]
   },
   {
@@ -474,7 +531,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -488,12 +545,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "785e3c9f83d912aef9fa5659340428c82ffe0739e0f19f8b623e957eac01574f"
+    "hash": "809c05bf197248844069ca010303a407c57ade7aa07b41750c0b87641ddc144b"
    }
   }
  },
