--- a/Regression_linéaire.ipynb
+++ b/Regression_linéaire.ipynb
@@ -54,7 +54,7 @@
     "#chemin elena\n",
     "#enedis = pd.read_csv(\"C:/Users/elelo/Documents/ENSAE/données statapp/Données/conso-inf36-region.csv\",sep=\";\")\n",
     "\n",
-    "#chemin côme\n",
+    "#chemin Côme\n",
     "#enedis_final = pd.read_csv(\"/Users/come/Desktop/ENSAE/Cours/Stat_App/enedis_final.csv\",sep=\";\")\n",
     "#enedis_final_trois_heures = pd.read_csv(\"/Users/come/Desktop/ENSAE/Cours/Stat_App/enedis_final_3h.csv\",sep=\";\")\n",
     "\n"
