--- a/Regression_linéaire.ipynb
+++ b/Regression_linéaire.ipynb
@@ -48,15 +48,15 @@
    "source": [
     "## Chargement des données énédis\n",
     "#chemin jérémie\n",
-    "enedis_final = pd.read_csv(\"/Users/jeremiedarracq/Stat-app/enedis_final.csv\",sep=\",\")\n",
+    "#enedis_final = pd.read_csv(\"/Users/jeremiedarracq/Stat-app/enedis_final.csv\",sep=\",\")\n",
     "#enedis_final = pd.read_csv(\"/Users/jeremiedarracq/Stat-app/enedis_final_3h.csv\",sep=\",\")\n",
     "\n",
     "#chemin elena\n",
     "#enedis = pd.read_csv(\"C:/Users/elelo/Documents/ENSAE/données statapp/Données/conso-inf36-region.csv\",sep=\";\")\n",
     "\n",
     "#chemin Côme\n",
-    "#enedis_final = pd.read_csv(\"/Users/come/Desktop/ENSAE/Cours/Stat_App/enedis_final.csv\",sep=\";\")\n",
-    "#enedis_final_trois_heures = pd.read_csv(\"/Users/come/Desktop/ENSAE/Cours/Stat_App/enedis_final_3h.csv\",sep=\";\")\n",
+    "enedis_final = pd.read_csv(\"/Users/come/Desktop/ENSAE/Cours/Stat_App/enedis_final.csv\",sep=\";\")\n",
+    "enedis_final_trois_heures = pd.read_csv(\"/Users/come/Desktop/ENSAE/Cours/Stat_App/enedis_final_3h.csv\",sep=\";\")\n",
     "\n"
    ]
   },
